--- a/pages.html
+++ b/pages.html
@@ -6,7 +6,7 @@ group: navigation
 ---
 {% include JB/setup %}
 
-<h2>My New All 中文Pages2</h2>
+<h2>All Pages</h2>
 <ul>
 {% assign pages_list = site.pages %}
 {% include JB/pages_list %}
